# cipher_Casale_Alex

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  cipher_agc2162.rst  conf.py  example.ipynb  make.bat  modules.rst
docs/jupyter_execute/: example.ipynb
src/cipher_agc2162/: __init__.py  cipher_agc2162.py
tests/: test_cipher_agc2162.py
